--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pysqlite3-binary==0.5.2
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
@@ -148,3 +149,4 @@ websockets==15.0.1
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.24.0
+
